<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_search">Search</string>
    <string name="menu_my_page">My Page</string>
    <string name="menu_home">Home</string>

    <!--    SignIn-->
    <string name="id_label">아이디</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="pw_label">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="sign_in_button">로그인</string>
    <string name="sign_up_button">회원가입</string>
</resources>